--- a/servicios/templates/tiposServicios/tipoServicio_modal.html
+++ b/servicios/templates/tiposServicios/tipoServicio_modal.html
@@ -18,24 +18,18 @@
   {% url 'servicios:modificarTipoServicio' object.pk %}
 {% endblock %}
 
-<!--Boton del modal-->
-{% block btnmodal %} Guardar {% endblock %} 
-
-{% block cform %}
-<form action="{% url 'servicios:modificarTipoServicio' object.pk %}" method="POST">
-  {% csrf_token %}
+{% block cmodal %}
   <div id="tipo-servicio-form-wrapper">
     {% crispy form form.helper %}
   </div>
   <div data-formset="productos_cantidad" id="productos">
     {% crispy tipoServicio_producto_formset tipoServicio_producto_formset_helper %}
   </div>
+{% endblock %}
 
-  <div class="modal-footer">
-    <button type="submit" class="btn btn-primary">Guardar</button>
-    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-  </div>
-</form>
+<!-- Boton del modal -->
+{% block btnmodal %}
+  Guardar
 {% endblock %}
 
 
@@ -70,11 +64,3 @@
   </script>
   
 {% endblock %}
-
-
-
-
-
-
-
-
