--- a/turnos/templates/horario_list.html
+++ b/turnos/templates/horario_list.html
@@ -14,12 +14,10 @@ Buscar Horario
 
 {% block cmain %} 
     {% for msg in messages %}
-
-    <div class="alert {% if msg.tags != "error" %} alert-{{msg.tags}} {% else %} alert-danger {% endif %} alert-dismissible fade show" role="alert">
+    <div class="alert {% if msg.tags == 'error' %}alert-danger{% else %}alert-{{ msg.tags }}{% endif %} alert-dismissible fade show" role="alert">
         <strong>Hey!</strong> {{ msg }}
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-        
     {% endfor %}
 
     <!--Filtro cabecera-->
