Cambios en cron y envio de mails

--- a/facturas/templates/facturas/facturas_list.html
+++ b/facturas/templates/facturas/facturas_list.html
@@ -26,7 +26,7 @@ Facturas
 
         <td>
             <a 
-            href="{% url 'facturas:exportar_facturas_pdf' servicio.pk %}" 
+            href="{% url 'facturas:exportar_facturas_pdf' f.pk %}" 
             class="bi bi-file-earmark-pdf-fill text-danger fs-5" 
             data-bs-toggle="tooltip" 
             data-bs-placement="top" 
