--- a/turnos/templates/horario_list.html
+++ b/turnos/templates/horario_list.html
@@ -57,8 +57,9 @@ Buscar Horario
                                     {{ form.fecha_fin }}
                                 </div>
                             </div>
+                            <!-- <div id="error-superposicion" style="color:red; display:none;"></div> -->
                             <div class="modal-footer">
-                                <button type="submit" class="btn btn-primary">Guardar</button>
+                                <button id="submit-btn" type="submit" class="btn btn-primary">Guardar</button>
                             </div>
                         </form>
                     </div>
